Add bug reporting information to Help & Support page (WIP, Xubuntu/xubuntu-docs#33)

--- a/content/help.html
+++ b/content/help.html
@@ -20,21 +20,48 @@ title: Help & Support
 
 <section class="wide alternative-bg">
    <section>
-      <h3>Internet Relay Chat</h3>
       <section class="columns-2">
          <div>
-            <p>Due to the real-time nature of IRC, it is often the fastest way to get help.</p>
-            <p><em>Please be patient: while there may appear to be lots of people in the channel, they may not be available at the time. While you are waiting, it is a good idea to look for an answer via other support methods.</em></p>
-            <p><a href="https://web.libera.chat/?nick=xu-help?w#xubuntu" class="button"><span>Join <strong>#xubuntu</strong></span></a></p>
+            <h3>Found A Bug? Got Stuck?</h3>
+            <p>In case you have found an bug or another kind of error in Xubuntu, please do the following first:</p>
+            <ul>
+               <li>
+                  <strong>Search for help from one of the community channels listed below</strong><br />
+                  If you didn't find any answers after thorougly looking, it's possible you've found a bug.
+               </li>
+               <li>
+                  <strong>Recommended: Try to determine the faulty package</strong><br />
+                  You can ask for further advice on your chosen channel – sometimes this can even help find answers.
+               </li>
+            </ul>
          </div>
          <div>
-            <p>Additional help can be found in the <a href="https://wiki.ubuntu.com/IRC/ChannelList#IRC.2FChannelList.2FLocal.Local_Ubuntu_channels">localized Ubuntu IRC channels</a>, for those who prefer to chat in their native language, as well as the official <a href="https://web.libera.chat/?nick=xu-help?w#xfce">#xfce</a> community support.</p>
-            <p>If you prefer a desktop application to use IRC, then you can use the pre-installed Pidgin instant messenger or your favorite IRC client to join the channels on the Libera Chat IRC network (irc.libera.chat).</p>
+            <h3>Reporting Bugs</h3>
+            <p>Once you have gathered the information required to file a bug, please report it to us so we can fix it:</p>
+            <ul>
+               <li></li>
+            </ul>
          </div>
       </section>
    </section>
 </section>
 
+<br />
+<section class="wide">
+   <h3>Internet Relay Chat</h3>
+   <section class="columns-2">
+      <div>
+         <p>Due to the real-time nature of IRC, it is often the fastest way to get help.</p>
+         <p><em>Please be patient: while there may appear to be lots of people in the channel, they may not be available at the time. While you are waiting, it is a good idea to look for an answer via other support methods.</em></p>
+         <p><a href="https://web.libera.chat/?nick=xu-help?w#xubuntu" class="button"><span>Join <strong>#xubuntu</strong></span></a></p>
+      </div>
+      <div>
+         <p>Additional help can be found in the <a href="https://wiki.ubuntu.com/IRC/ChannelList#IRC.2FChannelList.2FLocal.Local_Ubuntu_channels">localized Ubuntu IRC channels</a>, for those who prefer to chat in their native language, as well as the official <a href="https://web.libera.chat/?nick=xu-help?w#xfce">#xfce</a> community support.</p>
+         <p>If you prefer a desktop application to use IRC, then you can use the pre-installed Pidgin instant messenger or your favorite IRC client to join the channels on the Libera Chat IRC network (irc.libera.chat).</p>
+      </div>
+   </section>
+</section>
+<br />
 <section class="columns-2">
    <div>
       <h3>Mailing Lists</h3>
