Update Contribute page and remove some WIP stuff New content: * Blog articles post 24.04 * Release notes post 24.04 * Release pages for releases post 24.04

--- a/content/_index.html
+++ b/content/_index.html
@@ -33,15 +33,15 @@ title: Xubuntu
 
 <section class="wide alternative-bg">
    <section class="columns-1-2">
-      <h3>Latest Release</h3>
-      <h3>Latest News</h3>
-   </section>
-   <section class="columns-1-2">
-      <div class="latest-release featured">
+      <div class="latest-release">
+         <h3>Latest Release</h3>
          {{% latest-release %}}
       </div>
-      <section class="article-list columns-2">
-         {{% latest-news %}}
+      <section class="latest-news">
+         <h3>Latest News</h3>
+         <section class="article-list columns-2">
+            {{% latest-news %}}
+         </section>
       </section>
    </section>
 </section>
