--- a/content/contribute.html
+++ b/content/contribute.html
@@ -6,40 +6,40 @@ title:      Get Involved
 <p><strong>Everyone can participate</strong> in the Xubuntu community on many levels, from simply giving advice to fellow Xubuntu users to becoming a maintainer of core packages. Any contribution, even the smallest, is valued. We welcome everybody to improve Xubuntu and spread Free Software!</p>
 
 <div class="columns-2">
-   {{% icon-with-content icon=team_artwork %}}
-      <h4>Artwork</h4>
+   <div class="content">
+      <h3>Artwork</h3>
       <p>If you are of the artistic type, you can take part in making the Xubuntu desktop look better by contributing artwork and helping design the various visual aspects of Xubuntu.</p>
       <p><a class="quo" href="https://github.com/orgs/Xubuntu/teams/artwork">Artwork team in GitHub</a></p>
-   {{% /icon-with-content %}}
+   </div>
 
-   {{% icon-with-content icon=team_development %}}
-      <h4>Development</h4>
+   <div class="content">
+      <h3>Development</h3>
       <p>The development team is responsible for fixing bugs, packaging software, maintaining metapackages and occasionally writing new features or software.</p>
       <p><a class="quo" href="https://github.com/orgs/Xubuntu/teams/developers">Developers team in GitHub</a></p>
-   {{% /icon-with-content %}}
+   </div>
 
-   {{% icon-with-content icon=team_documentation %}}
-      <h4>Documentation</h4>
+   <div class="content">
+      <h3>Documentation</h3>
       <p></p>
       <p><a class="quo" href="https://github.com/orgs/Xubuntu/teams/documentation">Documentation team in GitHub</a></p>
-   {{% /icon-with-content %}}
+   </div>
 
-   {{% icon-with-content icon=team_marketing %}}
-      <h4>Marketing & Website</h4>
+   <div class="content">
+      <h3>Marketing & Website</h3>
       <p></p>
       <p><a class="quo" href="https://github.com/orgs/Xubuntu/teams/website">Website team in GitHub</a></p>
-   {{% /icon-with-content %}}
+   </div>
 
-   {{% icon-with-content icon=team_qa %}}
-      <h4>Quality Assurance</h4>
+   <div class="content">
+      <h3>Quality Assurance</h3>
       <p>Working with the QA team you get to work with one of the most crucial parts of each Xubuntu release – making sure everything works as expected.</p>
       <p><a class="quo" href="https://iso.qa.ubuntu.com/">Ubuntu testing tracker</a></p>
-   {{% /icon-with-content %}}
+   </div>
 
-   {{% icon-with-content icon=team_support %}}
-      <h4>User Support & Advocacy</h4>
+   <div class="content">
+      <h3>User Support & Advocacy</h3>
       <p>Like any open source software, Xubuntu needs volunteers to give user support and advocate Xubuntu both online and locally.</p>
-   {{% /icon-with-content %}}
+   </div>
 </div>
 
 <hr />
