--- a/content/help.html
+++ b/content/help.html
@@ -14,7 +14,7 @@ title: Help & Support
       <p>
          {{< release-buttons-supported >}}
       </p>
-      <p><a class="quo" href="#">Browse All Releases</a></p><!-- TODO -->
+      <p><a class="quo" href="/releases">Browse All Releases</a></p>
    </div>
 </section>
 
@@ -37,7 +37,7 @@ title: Help & Support
          </div>
          <div>
             <h3>Reporting Bugs</h3>
-            <p>Once you have gathered the information required to file a bug, please report it to us so we can fix it:</p>
+            <p>Once you have gathered the information required to file a bug, please report it to us so we can triage and fix it.</p>
             <ul>
                <li></li>
             </ul>
