--- a/content/_index.html
+++ b/content/_index.html
@@ -21,13 +21,13 @@ title: Xubuntu
    {{% icon-with-content icon=help %}}
       <h3>Need help?</h3>
       <p>User documentation is shipped with each version of Xubuntu. For further assistance, check all available support methods.</p>
-      <p><a class="quo" href="{{ "/help" | relative_url }}">Support</a></p>
+      <p><a class="quo" href="/help">Support</a></p>
    {{% /icon-with-content %}}
 
    {{% icon-with-content icon=community %}}
       <h3>Join our community</h3>
       <p>Xubuntu is created by volunteers.<br />Read more on how you can get involved and help us make Xubuntu even better!</p>
-      <p><a class="quo" href="{{ "/contribute" | relative_url }}">Get Involved</a></p>
+      <p><a class="quo" href="/contribute">Get Involved</a></p>
    {{% /icon-with-content %}}
 </section>
 
