Fix releases link on Help & Support

--- a/content/help.html
+++ b/content/help.html
@@ -14,7 +14,7 @@ title: Help & Support
       <p>
          {{< release-buttons-supported >}}
       </p>
-      <p><a class="quo" href="/releases">Browse All Releases</a></p>
+      <p><a class="quo" href="{{ "/releases" | relative_url }}">Browse All Releases</a></p>
    </div>
 </section>
 
