Add content to the Reporting Bugs section

--- a/content/help.html
+++ b/content/help.html
@@ -39,8 +39,10 @@ title: Help & Support
             <h3>Reporting Bugs</h3>
             <p>Once you have gathered the information required to file a bug, please report it to us so we can triage and fix it.</p>
             <ul>
-               <li></li>
+               <li>If you know the name of the faulty package, use the <em>ubuntu-bug</em> command in your terminal: <code>ubuntu-bug &lt;packagename&gt;</code></li>
+               <li>If the bug is more generalized or you'd like to suggest improvements to Xubuntu, submit a new issue to our <a href="https://github.com/Xubuntu/triage" target="_blank">triage</a> page on GitHub.</li>
             </ul>
+            <p>For other bug-reporting guidelines, see the <a href="https://help.ubuntu.com/community/ReportingBugs" target="_blank">ReportingBugs</a> article on the Ubuntu Community Help Wiki.</p>
          </div>
       </section>
    </section>
