Replace kiwiirc.com links with web.libera.chat equivalents (#11)

--- a/content/contribute.html
+++ b/content/contribute.html
@@ -18,7 +18,7 @@ title:      Get Involved
 <p>The main communication channels for Xubuntu development are the IRC and Matrix channels <strong>#xubuntu-devel</strong>, the <strong>ubuntu-devel mailing list</strong>, and the <strong>Telegram</strong> group. The Xubuntu team also runs community meetings more or less regularly.</p>
 
 <p>
-   <a class="button" href="https://kiwiirc.com/nextclient/irc.libera.chat?nick=xu-dev?w#xubuntu-devel"><span>IRC</span></a>
+   <a class="button" href="https://web.libera.chat/?nick=xu-dev?w#xubuntu-development"><span>IRC</span></a>
    <a class="button" href="https://matrix.to/#/#xubuntu-devel:ubuntu.com"><span>Matrix</span></a>
    <a class="button" href="https://lists.ubuntu.com/mailman/listinfo/xubuntu-devel"><span>Mailing list</span></a>
    <a class="button" href="https://t.me/XubuntuDevelopment"><span>Telegram</span></a>
