Fix link to contributor documentation

--- a/content/contribute.html
+++ b/content/contribute.html
@@ -9,7 +9,7 @@ title:      Get Involved
 
 <p>The Xubuntu contributor documentation is a compilation of guides that help keep the project in the right general direction and describes the processes the community use. Finally, the last part of the documentation instructs contributors to perform certain tasks.</p>
 
-<a class="button" href="http://docs.xubuntu.org/contributors/"><span>Contributor Documentation</span></a>
+<a class="button" href="http://docs.xubuntu.org/contributor/C/"><span>Contributor Documentation</span></a>
 
 <hr />
 
